--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -14,12 +14,14 @@ body {
     background-color: #fff;
     display: flex;
     align-items: center;
-    height: 64px; }
-  
-  .first-part {
-    display: flex; }
-  
-  .menu-header {
+    height: 64px;
+}
+
+.first-part {
+    display: flex;
+}
+
+.menu-header {
     border: none;
     width: 48px;
     /* Đảm bảo kích thước phù hợp với hình ảnh */
@@ -34,35 +36,42 @@ body {
     /* Căn giữa theo chiều dọc */
     transition: background-color 0.3s;
     /* Hiệu ứng chuyển đổi màu nền */
-    background-color: #fff; }
-  
-  .menu-header:hover {
+    background-color: #fff;
+}
+
+.menu-header:hover {
     background-color: #f0f0f0;
-    /* Màu nền khi hover */ }
-  
-  .menu-header-img {
-    max-width: 20px; }
-  
-  .beside-menu {
-    display: flex; }
-  
-  .logo-calendy {
+    /* Màu nền khi hover */
+}
+
+.menu-header-img {
+    max-width: 20px;
+}
+
+.beside-menu {
+    display: flex;
+}
+
+.logo-calendy {
     width: 48px;
     height: 48px;
     display: flex;
     justify-content: center;
-    align-items: center; }
-  
-  .beside-logo {
+    align-items: center;
+}
+
+.beside-logo {
     margin-left: 10px;
     display: flex;
     justify-content: center;
-    align-items: center; }
-  
-  .detail-items {
-    display: flex; }
-  
-  .current-state {
+    align-items: center;
+}
+
+.detail-items {
+    display: flex;
+}
+
+.current-state {
     margin-left: 30px;
     padding: 8px;
     border: 1px solid;
@@ -73,15 +82,18 @@ body {
     align-items: center;
     font-size: 14px;
     font-weight: 600;
-    cursor: pointer; }
-  
-  .current-state:hover {
-    background-color: #f0f0f0; }
-  
-  .change-state {
-    color: #5f6368; }
-  
-  .prev-state {
+    cursor: pointer;
+}
+
+.current-state:hover {
+    background-color: #f0f0f0;
+}
+
+.change-state {
+    color: #5f6368;
+}
+
+.prev-state {
     color: #5f6368;
     width: 32px;
     height: 32px;
@@ -91,18 +103,20 @@ body {
     padding: 8px;
     border-radius: 50%;
     position: relative;
-    transition: background-color 0.3s; }
-  
-  .prev-state:hover {
-    background-color: #f0f0f0; }
-  
- //::before là một pseudo-element được sử dụng để thêm nội dung vào
- // trước phần tử mục tiêu mà không cần phải thay đổi cấu trúc HTML
- // Nó cho phép bạn chèn nội dung hoặc kiểu dáng bổ sung mà không cần thay đổi HTML gốc.
- // Khi bạn sử dụng ::before, bạn có thể đặt các quy tắc kiểu dáng cho pseudo-element này
- // giống như đối với một phần tử HTML thực sự. Điều này có thể bao gồm việc thiết lập
- // kích thước, màu sắc, nội dung và các thuộc tính khác.
-  .prev-state::before {
+    transition: background-color 0.3s;
+}
+
+.prev-state:hover {
+    background-color: #f0f0f0;
+}
+
+//::before là một pseudo-element được sử dụng để thêm nội dung vào
+// trước phần tử mục tiêu mà không cần phải thay đổi cấu trúc HTML
+// Nó cho phép bạn chèn nội dung hoặc kiểu dáng bổ sung mà không cần thay đổi HTML gốc.
+// Khi bạn sử dụng ::before, bạn có thể đặt các quy tắc kiểu dáng cho pseudo-element này
+// giống như đối với một phần tử HTML thực sự. Điều này có thể bao gồm việc thiết lập
+// kích thước, màu sắc, nội dung và các thuộc tính khác.
+.prev-state::before {
     content: "";
     width: 10px;
     height: 10px;
@@ -111,8 +125,175 @@ body {
     position: absolute;
     top: 50%;
     left: 55%;
-    transform: translate(-50%, -50%) rotate(-45deg); 
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+
+// Add, edit event form
+
+
+.container-fluid {
+    position: relative;
+}
+
+.add-event-form, .edit-event-form {
+    position: absolute;
+    max-width: 300px;
+    max-height: 500px;
+    overflow: hidden;
+    border-radius: 20px;
+    background-color: $containerBackground;
+    box-shadow: 4px 4px 8px #8888888a;
+    top: 20px;
+    left: -300px;
+    z-index: 2;
+    transition: left 0.5s ease-in;
+
+    .add-event-header {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 20px;
+        color: $textColor2;
+        border-bottom: 1px solid $boderColor;
+
+        .title {
+            font-size: 1.2rem;
+            font-weight: 500;
+        }
+
+        .close {
+            font-size: 1.5rem;
+            cursor: pointer;
+
+            &:hover {
+                color: red;
+            }
+        }
     }
+
+    .add-event-body {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        padding: 20px;
+
+        .add-event-input {
+            width: 100%;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 10px;
+
+            input {
+                width: 100%;
+                height: 100%;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid black;
+                padding: 0 10px;
+                font-size: 1rem;
+                font-weight: 400;
+                color: #373c4f;
+
+                &::placeholder {
+                    color: #a5a5a5;
+                }
+
+                &:focus {
+                    border-bottom: 1px solid var(--my-cyan);
+
+                    &::placeholder {
+                        color: $textColor2;
+                    }
+                }
+            }
+        }
+    }
+
+    .add-event-footer {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $containerBackground;
+        padding-bottom: 20px;
+
+        .add-event-btn {
+            height: 40px;
+            font-size: 1rem;
+            font-weight: 500;
+            outline: none;
+            border: none;
+            color: white;
+            background-color: $textColor2;
+            border-radius: 20px;
+            cursor: pointer;
+            padding: 0 10px;
+            text-align: right;
+            box-shadow: 4px 4px 8px #8888888a;
+
+            &:hover {
+                box-shadow: 4px 4px 8px transparent;
+                border: 0;
+            }
+        }
+    }
+}
+
+.edit-event-form {
+    .add-event-footer{
+        justify-content: space-around;
+
+        .save-event-btn{
+            height: 40px;
+                font-size: 1rem;
+                font-weight: 500;
+                outline: none;
+                border: none;
+                color: white;
+                background-color: $textColor2;
+                border-radius: 20px;
+                cursor: pointer;
+                padding: 0 10px;
+                text-align: right;
+                box-shadow: 4px 4px 8px #8888888a;
+
+                &:hover {
+                    box-shadow: 4px 4px 8px transparent;
+                    border: 0;
+                }
+        }
+        .remove-event-btn{  
+            height: 40px;
+                font-size: 1rem;
+                font-weight: 500;
+                outline: none;
+                border: none;
+                color: white;
+                background-color: red;
+                border-radius: 20px;
+                cursor: pointer;
+                padding: 0 10px;
+                text-align: right;
+                box-shadow: 4px 4px 8px #8888888a;
+
+                &:hover {
+                    box-shadow: 4px 4px 8px transparent;
+                    border: 0;
+                }
+        }
+    }
+}
+
+.active {
+    left: 10px;
+}
+
 
 .left {
     margin-top: 20px;
@@ -137,115 +318,6 @@ body {
         }
     }
 
-    .add-event-wrapper {
-        position: absolute;
-        left: 50%;
-        width: 100%;
-        max-height: 0px;
-        overflow: hidden;
-        border-radius: 20px;
-        background-color: $containerBackground;
-        top: 0;
-        left: 0;
-        z-index: 2;
-        transition: max-height 0.5s ease-in;
-
-        .add-event-header {
-            width: 100%;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 20px;
-            color: $textColor2;
-            border-bottom: 1px solid $boderColor;
-
-            .title {
-                font-size: 1.2rem;
-                font-weight: 500;
-            }
-
-            .close {
-                font-size: 1.5rem;
-                cursor: pointer;
-
-                &:hover {
-                    color: red;
-                }
-            }
-        }
-
-        .add-event-body {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            padding: 20px;
-
-            .add-event-input {
-                width: 100%;
-                height: 40px;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                gap: 10px;
-
-                input {
-                    width: 100%;
-                    height: 100%;
-                    outline: none;
-                    border: none;
-                    border-bottom: 1px solid black;
-                    padding: 0 10px;
-                    font-size: 1rem;
-                    font-weight: 400;
-                    color: #373c4f;
-
-                    &::placeholder {
-                        color: #a5a5a5;
-                    }
-
-                    &:focus {
-                        border-bottom: 1px solid var(--my-cyan);
-
-                        &::placeholder {
-                            color: $textColor2;
-                        }
-                    }
-                }
-            }
-        }
-
-        .add-event-footer {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: $containerBackground;
-            padding-bottom: 10px;
-
-            .add-event-btn {
-                height: 40px;
-                font-size: 1rem;
-                font-weight: 500;
-                outline: none;
-                border: none;
-                color: $textColor2;
-                background-color: transparent;
-                border-radius: 20px;
-                cursor: pointer;
-                padding: 0 10px;
-                border: 3px solid $textColor2;
-                text-align: right;
-
-                &:hover {
-                    background-color: $textBackground;
-                    border: 0;
-                }
-            }
-        }
-    }
-
     .edit-event-wrapper {
         position: absolute;
         visibility: hidden;
@@ -260,10 +332,6 @@ body {
         z-index: 1;
         background-color: rgba(0, 0, 0, 0.3);
         visibility: hidden;
-    }
-
-    .active {
-        max-height: 300px;
     }
 
     .calendar-main {
@@ -378,7 +446,7 @@ body {
                     width: 14.285%;
                     height: 0;
                     // ky thuat Aspect Ratio de cho width = height
-                    padding-top: 14.285%;   
+                    padding-top: 14.285%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -496,6 +564,7 @@ body {
                     background-color: $textColor2;
                     color: white;
                     width: 100%;
+                    min-height: 100px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
