--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -23,7 +23,7 @@
 
     <div class="edit-event-form">
         <div class="add-event-header">
-            <div class="title">Add Event</div>
+            <div class="title">Edit</div>
             <i class="fas fa-times close"></i>
         </div>
         <div class="add-event-body">
